RESOLVED FIXED50482
Crash trying to empty caches with no WebProcess.
https://bugs.webkit.org/show_bug.cgi?id=50482
Summary Crash trying to empty caches with no WebProcess.
Brady Eidson
Reported 2010-12-03 13:48:56 PST
We crash trying to empty caches in a WKContext with no WebProcess. In radar as <rdar://problem/8725679>
Attachments
Proprosed fix v1 (4.05 KB, patch)
2010-12-03 13:51 PST, Brady Eidson
sam: review-
Fix v2 (5.36 KB, patch)
2010-12-03 14:00 PST, Brady Eidson
sam: review+
beidson: commit-queue-
Brady Eidson
Comment 1 2010-12-03 13:51:44 PST
Created attachment 75538 [details] Proprosed fix v1
Sam Weinig
Comment 2 2010-12-03 13:53:39 PST
Comment on attachment 75538 [details] Proprosed fix v1 View in context: https://bugs.webkit.org/attachment.cgi?id=75538&action=review > WebKit2/UIProcess/WebContext.cpp:182 > + if (m_clearResourceCachesForNewWebProcess) { > + m_process->send(Messages::WebProcess::ClearResourceCaches(), 0); > + m_clearResourceCachesForNewWebProcess = false; > + } > + > + if (m_clearApplicationCacheForNewWebProcess) { > + m_process->send(Messages::WebProcess::ClearApplicationCache(), 0); > + m_clearApplicationCacheForNewWebProcess = false; > + } This should use the process initialization message idiom used above in this function, instead of sending its own messages.
Brady Eidson
Comment 3 2010-12-03 14:00:59 PST
Brady Eidson
Comment 4 2010-12-03 14:07:05 PST
Note You need to log in before you can comment on or make changes to this bug.