<rdar://problem/8725679> and https://bugs.webkit.org/show_bug.cgi?id=50482 Crash trying to empty caches with no WebProcess.

Reviewed by Sam Weinig.

* Shared/WebProcessCreationParameters.h: Add the "clear this cache" flags.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::WebContext):
(WebKit::WebContext::ensureWebProcess): If either of the clear cache flags are set when a new WebProcess is
  created, include those flags in the parameters.
(WebKit::WebContext::clearResourceCaches): If the current process isn't valid, flag this action to be done later.
(WebKit::WebContext::clearApplicationCache): Ditto.
* UIProcess/WebContext.h:

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess): Clear the caches if told to.



Canonical link: https://commits.webkit.org/63723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73299 268f45cc-cd09-0410-ab3c-d52691b4dbfc